--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+management.security.enabled=false
 
+spring.datasource.name=tasks
+spring.jpa.show-sql=true
+
+#H2 settings
+
+spring.h2.console.enabled= true
+spring.h2.console.path=/h2.console
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
