--- a/src/main/frontend/angular.json
+++ b/src/main/frontend/angular.json
@@ -25,7 +25,8 @@
             ],
             "styles": [
               "src/styles.css",
-                "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+                "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
             ],
             "scripts": [
                 "./node_modules/jquery/dist/jquery.js",
@@ -89,8 +90,9 @@
               "src/assets"
             ],
             "styles": [
-                "./node_modules/bootstrap/dist/css/",
-              "src/styles.css"
+              "src/styles.css",
+                "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
             ],
             "scripts": [
                 "node_modules/jquery/dist/jquery.js",
