--- a/src/main/frontend/angular.json
+++ b/src/main/frontend/angular.json
@@ -25,8 +25,7 @@
             ],
             "styles": [
               "src/styles.css",
-                "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
+                "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
                 "./node_modules/jquery/dist/jquery.js",
@@ -90,14 +89,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-                "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
+              "src/styles.css"
             ],
             "scripts": [
-                "node_modules/jquery/dist/jquery.js",
-                "node_modules/popper.js/dist/umd/popper.js",
-                "node_modules/bootstrap/dist/js/bootstrap.js"
+
             ]
           }
         },
