--- a/src/main/frontend/angular.json
+++ b/src/main/frontend/angular.json
@@ -28,9 +28,9 @@
                 "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-                "./node_modules/jquery/dist/jquery.js",
-                "./node_modules/popper.js/dist/umd/popper.js",
-                "./node_modules/bootstrap/dist/js/bootstrap.js"
+                "node_modules/jquery/dist/jquery.js",
+                "node_modules/popper.js/dist/umd/popper.js",
+                "node_modules/bootstrap/dist/js/bootstrap.js"
             ]
           },
           "configurations": {
@@ -89,7 +89,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+                "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
 
